--- a/plugin/components/SettingsBtn/settings-btn.scss
+++ b/plugin/components/SettingsBtn/settings-btn.scss
@@ -13,6 +13,8 @@
 
 
   .settings-btn-menu {
+    display: none;
+    &.active{display: block;}
     position: absolute;
     // left: 50%;
     top: 50%;
