--- a/plugin/components/SettingsCloseBtn/settings-close-btn.scss
+++ b/plugin/components/SettingsCloseBtn/settings-close-btn.scss
@@ -3,10 +3,15 @@
     top: 0;
     right: 40px; 
     height: 100%;
-    visibility:hidden;
+    display: none;
+    // visibility:hidden;
     z-index: 7;
     // margin-top: 10px;
     // margin-right: 50px;
+    &.active {
+      
+      display: block;
+    }
 
     cursor: pointer;
     img {
